kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    app: lks-apps
    environment: apps
