kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadsim-service
  labels:
    app: loadsim-app
    environment: apps
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: loadsim-app
